--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
           <h2 class="motivation__heading">What will you get:</h2>
           <ul class="motivation__list">
             <li class="motivation__list-item">
-              <img src="./images/list.svg" width="50" height="50" />
+              <img src="./new_images/guide.png" width="50" height="50" />
               <h3 class="motivation__list-item-heading">Weekly shopping list</h3>
               <p class="motivation__list-item-desc">
                 Along with your meal plan, we’ll provide convenient shopping lists for you every
@@ -113,14 +113,14 @@
               </p>
             </li>
             <li class="motivation__list-item">
-              <img src="./images/gid.svg" width="50" height="50" />
+              <img src="./new_images/quick.png" width="50" height="50" />
               <h3 class="motivation__list-item-heading">Easy-to-follow personalized meal plan</h3>
               <p class="motivation__list-item-desc">
                 Reach your goals with a meal plan that fits your needs and wishes.
               </p>
             </li>
             <li class="motivation__list-item">
-              <img src="./images/dev.svg" width="50" height="50" />
+              <img src="./new_images/rule.png" width="50" height="50" />
               <h3 class="motivation__list-item-heading">Enjoy delicious meals</h3>
               <p class="motivation__list-item-desc">
                 Try out all of the delicious meals provided for you with high-quality diy videos for
@@ -146,7 +146,7 @@
               </p>
             </li> -->
             <li class="motivation__list-item">
-              <img src="./images/free-profile.svg" width="50" height="50" />
+              <img src="./new_images/profile.png" width="50" height="50" />
               <h3 class="motivation__list-item-heading">Personalized solution for great results</h3>
               <p class="motivation__list-item-desc">
                 Your personal medical expert and professional help.
