--- a/src/measurements.html
+++ b/src/measurements.html
@@ -18,9 +18,10 @@
     <header class="header section header-quiz">
       <div class="header__container container">
         <div class="logo-link logo-link--header" href="./index.html">
-          <svg class="logo">
+          <!-- <svg class="logo">
             <use class="header__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
-          </svg>
+          </svg> -->
+          <img class="logo" src="./new_images/avokado.png" alt="logo" />
         </div>
       </div>
     </header>
@@ -28,7 +29,7 @@
       <section class="section hero__section">
         <div
           class="hero__container container"
-          style="background-image: url(./images/quiz-bg/bg-25.jpeg)"
+          style="background-image: url(./new_images/quiz_bg/bg-25.png)"
         >
           <svg class="hero__mask-svg">
             <use href="./images/symbol-defs.svg#icon-head-mask"></use>
@@ -39,12 +40,17 @@
               <div class="heading-circle--second"></div>
               <div class="heading-circle--third"></div>
               <div class="heading-circle__content back">
-                <svg class="heading__logo">
+                <!-- <svg class="heading__logo">
                   <use
                     class="heading__logo-svg"
                     href="./images/symbol-defs.svg#icon-measurments"
                   ></use>
-                </svg>
+                </svg> -->
+                <img
+                  class="heading__logo"
+                  src="./new_images/header_icon_25.png"
+                  alt="measurements_icon"
+                />
               </div>
             </div>
             <h1 class="hero__heading">Measurements</h1>
@@ -87,9 +93,14 @@
                   autocomplete="off"
                 />
                 <label class="measurements__form-label" for="age-imperic">Age</label>
-                <svg class="measurements__form-input-icon">
+                <!-- <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-1-1"></use>
-                </svg>
+                </svg> -->
+                <img
+                  class="measurements__form-input-icon"
+                  src="./new_images/age.png"
+                  alt="age-icon"
+                />
                 <span class=""></span>
                 <span class="measurements__form-bottom-line"></span>
                 <div class="measurements__form-notification" data-type="imperial-age"></div>
@@ -109,9 +120,14 @@
                     autocomplete="off"
                   />
                   <label class="measurements__form-label" for="height-ft">ft</label>
-                  <svg class="measurements__form-input-icon">
+                  <!-- <svg class="measurements__form-input-icon">
                     <use href="./images/symbol-defs.svg#measurments-2-1"></use>
-                  </svg>
+                  </svg> -->
+                  <img
+                    class="measurements__form-input-icon"
+                    src="./new_images/height.png"
+                    alt="height-icon"
+                  />
                   <span class=""></span>
                   <span class="measurements__form-bottom-line"></span>
                   <div class="measurements__form-notification" data-type="imperial-height-ft"></div>
@@ -130,9 +146,14 @@
                     autocomplete="off"
                   />
                   <label class="measurements__form-label" for="height-inch">inch</label>
-                  <svg class="measurements__form-input-icon">
+                  <!-- <svg class="measurements__form-input-icon">
                     <use href="./images/symbol-defs.svg#measurments-2-1"></use>
-                  </svg>
+                  </svg> -->
+                  <img
+                    class="measurements__form-input-icon"
+                    src="./new_images/height.png"
+                    alt="height-icon"
+                  />
                   <span class=""></span>
                   <span class="measurements__form-bottom-line"></span>
                   <div
@@ -155,9 +176,14 @@
                   autocomplete="off"
                 />
                 <label class="measurements__form-label" for="weight-imperic">lb</label>
-                <svg class="measurements__form-input-icon">
+                <!-- <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-3-1"></use>
-                </svg>
+                </svg> -->
+                <img
+                  class="measurements__form-input-icon"
+                  src="./new_images/weight.png"
+                  alt="weight-icon"
+                />
                 <span class=""></span>
                 <span class="measurements__form-bottom-line"></span>
                 <div class="measurements__form-notification" data-type="imperial-weight"></div>
@@ -176,9 +202,14 @@
                   autocomplete="off"
                 />
                 <label class="measurements__form-label" for="target-weight-imperic">lb</label>
-                <svg class="measurements__form-input-icon">
+                <!-- <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-4-1"></use>
-                </svg>
+                </svg> -->
+                <img
+                  class="measurements__form-input-icon"
+                  src="./new_images/target.png"
+                  alt="target-icon"
+                />
                 <span class=""></span>
                 <span class="measurements__form-bottom-line"></span>
                 <div
@@ -214,9 +245,14 @@
                   autocomplete="off"
                 />
                 <label class="measurements__form-label" for="age-metric">Age (years)</label>
-                <svg class="measurements__form-input-icon">
+                <!-- <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-1-1"></use>
-                </svg>
+                </svg> -->
+                <img
+                  class="measurements__form-input-icon"
+                  src="./new_images/age.png"
+                  alt="age-icon"
+                />
                 <span class=""></span>
                 <span class="measurements__form-bottom-line"></span>
                 <div class="measurements__form-notification" data-type="metric-age"></div>
@@ -235,9 +271,14 @@
                   autocomplete="off"
                 />
                 <label class="measurements__form-label" for="height-metric">Height (cm)</label>
-                <svg class="measurements__form-input-icon">
+                <!-- <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-2-1"></use>
-                </svg>
+                </svg> -->
+                <img
+                  class="measurements__form-input-icon"
+                  src="./new_images/height.png"
+                  alt="height-icon"
+                />
                 <span class=""></span>
                 <span class="measurements__form-bottom-line"></span>
                 <div class="measurements__form-notification" data-type="metric-height-cm"></div>
@@ -256,9 +297,14 @@
                   autocomplete="off"
                 />
                 <label class="measurements__form-label" for="weight-metric">Weight (kg)</label>
-                <svg class="measurements__form-input-icon">
+                <!-- <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-3-1"></use>
-                </svg>
+                </svg> -->
+                <img
+                  class="measurements__form-input-icon"
+                  src="./new_images/weight.png"
+                  alt="weight-icon"
+                />
                 <span class=""></span>
                 <span class="measurements__form-bottom-line"></span>
                 <div class="measurements__form-notification" data-type="metric-weight"></div>
@@ -279,9 +325,14 @@
                 <label class="measurements__form-label" for="target-weight-metric"
                   >Target weight (kg)</label
                 >
-                <svg class="measurements__form-input-icon">
+                <!-- <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-4-1"></use>
-                </svg>
+                </svg> -->
+                <img
+                  class="measurements__form-input-icon"
+                  src="./new_images/target.png"
+                  alt="target-icon"
+                />
                 <span class=""></span>
                 <span class="measurements__form-bottom-line"></span>
                 <div class="measurements__form-notification" data-type="metric-target-weight"></div>
@@ -322,7 +373,9 @@
                 <use
                   class="progress__button-svg"
                   href="./images/symbol-defs.svg#icon-back-circled"
-                ></use></svg>Back
+                ></use>
+              </svg>
+              Back
             </a>
             <div class="progress-bar__wrap">
               <div class="progress-bar__line">
