--- a/src/paypage.html
+++ b/src/paypage.html
@@ -19,9 +19,10 @@
     <header class="header section header-quiz">
         <div class="header__container container">
             <div class="logo-link logo-link--header" href="./index.html">
-                <svg class="logo">
+                <!-- <svg class="logo">
                     <use class="header__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
-                </svg>
+                </svg> -->
+                <img class="logo" src="./new_images/avokado.png" alt="logo" />
             </div>
         </div>
     </header>
@@ -32,7 +33,7 @@
             </div>
             </div>
             <div class="final__hero-parallax">
-                <img src="./images/image-16.png" class="final__hero-parallax-image--first" alt="image-16"
+                <img src="./new_images/salad.png" class="final__hero-parallax-image--first" alt="image-16"
                     style="transform: matrix(1, 0, 0, 1, 31.35, -19.4651)" />
                 <!-- <img
             src="./images/image-23.png"
@@ -40,9 +41,9 @@
             alt="image-23"
             style="transform: matrix(1, 0, 0, 1, 20.9, -7.78604)"
                 /> -->
-                <img src="./images/image-24.png" class="final__hero-parallax-image--third" alt="image-24"
-                    style="transform: matrix(1, 0, 0, 1, 7.8375, -19.4651)" />
-                <img src="./images/image-25.png" class="final__hero-parallax-image--fourth" alt="image-25"
+                <img src="./new_images/avokado_paralax.png" class="final__hero-parallax-image--third" alt="image-24"
+                    style="transform: matrix(1, 0, 0, 1, -10.8375, 10.4651)" />
+                <img src="./new_images/citrus.png" class="final__hero-parallax-image--fourth" alt="image-25"
                     style="transform: matrix(1, 0, 0, 1, 31.8, 12.9767)" />
             </div>
         </section>
@@ -872,15 +873,16 @@
             </li>
             <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="">Help center</a></li> -->
           </ul>
-          <a class="logo-link logo-link--footer" href="./index.html"
-            ><svg class="logo logo--footer">
+          <a class="logo-link logo-link--footer" href="./index.html">
+            <!-- <svg class="logo logo--footer">
               <use class="logo-svg--footer" href="./images/symbol-defs.svg#icon-keto-icon"></use>
-            </svg>
+            </svg> -->
+            <img class="logo logo--footer" src="./new_images/avokado3.png" alt="logo" />
           </a>
           <div class="footer__license-wrap">
-            <h3 class="footer__license-heading">2022 ALL RIGHTS RESERVED</h3>
-            <p class="footer__license-desc">Developed by dPartner IT</p>
-            <button class="reset-button">Reset answers</button>
+            <h3 class="footer__license-heading">© 2022 nutritionnow. All Rights Reserved.</h3>
+            <p class="footer__license-desc">Disclaimer: results may vary from person to person</p>
+            <!-- <button class="reset-button">Reset answers</button> -->
           </div>
         </div>
       </footer>
