--- a/src/final.html
+++ b/src/final.html
@@ -17,9 +17,10 @@
     <header class="header section header-quiz">
       <div class="header__container container">
         <div class="logo-link logo-link--header" href="./index.html">
-          <svg class="logo">
+          <!-- <svg class="logo">
             <use class="header__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
-          </svg>
+          </svg> -->
+          <img class="logo" src="./new_images/avokado.png" alt="logo" />
         </div>
       </div>
     </header>
@@ -33,12 +34,12 @@
             </div>
           </div>
           <div class="final__hero-phone-wrap">
-            <img class="final__hero-phone" src="./images/final-phone.png" alt="phone" />
+            <img class="final__hero-phone" src="./new_images/phone.png" alt="phone" />
           </div>
         </div>
         <div class="final__hero-parallax">
           <img
-            src="./images/image-16.png"
+            src="./new_images/salad.png"
             class="final__hero-parallax-image--first"
             alt="image-16"
             style="transform: matrix(1, 0, 0, 1, 31.35, -19.4651)"
@@ -50,13 +51,13 @@
             style="transform: matrix(1, 0, 0, 1, 20.9, -7.78604)"
           /> -->
           <img
-            src="./images/image-24.png"
+            src="./new_images/avokado_paralax.png"
             class="final__hero-parallax-image--third"
             alt="image-24"
-            style="transform: matrix(1, 0, 0, 1, 7.8375, -19.4651)"
+            style="transform: matrix(1, 0, 0, 1, -10.8375, 10.4651)"
           />
           <img
-            src="./images/image-25.png"
+            src="./new_images/citrus.png"
             class="final__hero-parallax-image--fourth"
             alt="image-25"
             style="transform: matrix(1, 0, 0, 1, 41.8, -12.9767)"
@@ -1090,10 +1091,10 @@ Recipes</h3>
 </clipPath>
 </defs>
             </svg>
-            <img class="final__summary-social-avatar-first" src="./images/avatar-1.png" alt="avatar-1">
-            <img class="final__summary-social-avatar-second" src="./images/avatar-2.png" alt="avatar-2">
-            <img class="final__summary-social-avatar-third" src="./images/avatar-3.png" alt="avatar-3">
-            <img class="final__summary-social-avatar-fourth" src="./images/avatar-4.png" alt="avatar-4">
+            <img class="final__summary-social-avatar-first" src="./new_images/avatar-1.png" alt="avatar-1">
+            <img class="final__summary-social-avatar-second" src="./new_images/avatar-2.png" alt="avatar-2">
+            <img class="final__summary-social-avatar-third" src="./new_images/avatar-3.png" alt="avatar-3">
+            <img class="final__summary-social-avatar-fourth" src="./new_images/avatar-4.png" alt="avatar-4">
             <div class="final__summary-social-center">
               <span class="final__summary-social-center-digits">23M+</span>
               <span>users worldwide</span>
