--- a/src/index.html
+++ b/src/index.html
@@ -196,6 +196,6 @@
       <a class="cookie__button" href="../src/cookie.html" id="read">Read policy</a>
     </div>
     <script src="./index.js"></script>
-    <!-- <script src="./js/menu.js"></script> -->
+    <!-- <script src="./js/menu.js"></script> ///////-->
   </body>
 </html>
